--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  background-color: lightblue;
+  background-color: #e6ddad;
   box-sizing: border-box;
   position: absolute;
   width: 100%;
