--- a/src/component/sortComponent/sortComponent.module.scss
+++ b/src/component/sortComponent/sortComponent.module.scss
@@ -9,8 +9,8 @@
 }
 
 .select {
-  border: 2px solid darkblue;
-  background-color: #2e82c3;
+  border: 2px solid #8b5a00;
+  background-color: #c3af2e;
   color: white;
   padding: 2px;
   border-radius: 5px;
