--- a/src/component/storage/storage.module.scss
+++ b/src/component/storage/storage.module.scss
@@ -8,9 +8,9 @@
 }
 
 button {
-  border: 2px solid darkblue;
+  border: 2px solid #8b5a00;
   border-radius: 5px;
-  background-color: #2e82c3;
+  background-color: #c3af2e;
   color: white;
   padding: 4px;
   margin-left: 2px;
